--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "author": "harago",
   "scripts": {
-    
-    
     "ser": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -43,7 +41,8 @@
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.1.0",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "node-pre-gyp": "0.12.0"
   },
   "license": "ISC"
 }
