--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vue": "^2.6.12",
     "vue-simple-alert": "^1.1.1",
     "vue-sweetalert2": "^4.3.1",
-    "vuetify": "^2.4.11"
+    "vuetify": "^2.4.11",
+    "cloudinary": ""
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.5.12",
