--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "dateformat": "^4.4.1",
     "eslint-plugin-vue": "^7.9.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "git": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
@@ -34,7 +36,7 @@
     "vue-simple-alert": "^1.1.1",
     "vue-sweetalert2": "^4.3.1",
     "vuetify": "^2.4.11",
-    "cloudinary": ""
+    "writable": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.5.12",
