--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "git": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
